apps/base/wg-easy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:15
          ports:
            - containerPort: 51820
              protocol: UDP
            - containerPort: 51821
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-easy-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      sysctls:
        - name: net.ipv4.ip_forward
          value: "1"
        - name: net.ipv4.conf.all.src_valid_mark
          value: "1"
        - name: net.ipv6.conf.all.disable_ipv6
          value: "0"
        - name: net.ipv6.conf.all.forwarding
          value: "1"
        - name: net.ipv6.conf.default.forwarding
          value: "1"
