apps/base/wg-easy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
  namespace: wireguard
spec:
  type: ClusterIP
  ports:
    - name: wireguard-udp
      port: 51820
      protocol: UDP
      targetPort: 51820
    - name: wg-easy-ui
      port: 51821
      protocol: TCP
      targetPort: 51821
  selector:
    app: wg-easy
